--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/pwa": "^3.0.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.4"
   },
   "devDependencies": {
-    "@nuxtjs/color-mode": "^1.0.2",
+    "@nuxtjs/color-mode": "^1.0.3",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
-    "@nuxtjs/svg": "^0.1.11",
+    "@nuxtjs/svg": "^0.1.12",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.10.0",
@@ -31,6 +31,6 @@
     "node-sass": "^4.14.1",
     "nodemon": "^1.18.9",
     "prettier": "^1.19.1",
-    "sass-loader": "^9.0.2"
+    "sass-loader": "^9.0.3"
   }
 }
